# cmake

./: CMakeLists.txt  main.cpp
foo/: CMakeLists.txt  foo.cmake  foo.cpp  foo.h
