#
# This file was genared by D:\git123\proj2cmake\Debug\proj2cmake.exe and will be overwritten on it's next run!
# Please put all configurations in the cmake_conf/*.cmake files.
#

cmake_minimum_required(VERSION 2.8)

ADD_LIBRARY(foo STATIC "foo.cpp")

set_property(TARGET foo PROPERTY CXX_STANDARD 11) 





